--- a/src/app/components/create-question/create-question.component.css
+++ b/src/app/components/create-question/create-question.component.css
@@ -17,9 +17,11 @@ ul {
   list-style: none;
 }
 .view-item {
-  background-color: rgba(244, 246, 242, 0.955);
+  /* background-color: rgb(92, 85, 85); */
+  background-color: white;
+  color: rgb(126, 118, 118);
   width: 90%;
-  margin: 5px auto;
+  margin: 10px auto;
 }
 
 .question {
@@ -27,21 +29,24 @@ ul {
   border-left: 2px solid black;
 }
 .view-control-container {
-  background-color: aliceblue;
   display: none;
 }
 .view-item:hover .view-control-container {
   display: block;
 }
+.view-item:hover {
+  cursor: pointer;
+}
 .view-item:hover .question {
-  background-color: rgb(157, 195, 190);
-  color: white;
+  background-color: rgb(92, 85, 85);
+  color: rgb(244, 237, 237);
+  font-size: 1.2rem;
 }
 .view-control {
   width: 90%;
   margin: 2px auto;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(5, 1fr);
 }
 .icon {
   display: inline-block;
