--- a/src/styles.css
+++ b/src/styles.css
@@ -31,6 +31,7 @@ a {
 
   height: 100%;
   grid-template-columns: calc((30 / 80) * 100%) calc((50 / 80) * 100%);
+  grid-auto-rows: 100%;
   /* grid-template-rows: 100%; */
 }
 .formgroup {
@@ -73,4 +74,11 @@ a {
 }
 .non-loader {
   position: relative;
+}
+/* style for create blocks */
+.create {
+  overflow-y: scroll;
+}
+.create::-webkit-scrollbar {
+  display: none;
 }
